--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"@formspree/react": "^2.5.1",
+		"@gsap/react": "^2.1.0",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -46,6 +47,7 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.7",
-		"tailwindcss": "^3.4.0"
+		"tailwindcss": "^3.4.0",
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11"
 	}
 }
