--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^1.6.7",
 		"classnames": "^2.5.1",
+		"formdata-polyfill": "^4.0.10",
 		"formik": "^2.4.5",
 		"gsap": "npm:@gsap/simply@^3.12.4",
 		"jquery": "^3.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
+		"react-mailchimp-subscribe": "^2.1.3",
 		"react-scripts": "^5.0.1",
 		"react-svg": "^16.1.32",
 		"web-vitals": "^2.1.4",
@@ -46,8 +48,8 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"@tailwindcss/forms": "^0.5.7",
-		"tailwindcss": "^3.4.0",
-		"@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+		"tailwindcss": "^3.4.0"
 	}
 }
