--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 		"gsap": "npm:@gsap/simply@^3.12.4",
 		"jquery": "^3.7.1",
 		"react": "^18.2.0",
+		"react-cookie-consent": "^9.0.0",
 		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
 		"react-mailchimp-subscribe": "^2.1.3",
+		"react-router-dom": "^6.22.0",
 		"react-scripts": "^5.0.1",
 		"react-svg": "^16.1.32",
 		"web-vitals": "^2.1.4",
