--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
 		"react": "^18.2.0",
 		"react-cookie-consent": "^9.0.0",
 		"react-dom": "^18.2.0",
+		"react-ga4": "^2.1.0",
 		"react-helmet": "^6.1.0",
 		"react-mailchimp-subscribe": "^2.1.3",
 		"react-router-dom": "^6.22.0",
+		"react-router-hash-link": "^2.4.3",
 		"react-scripts": "^5.0.1",
 		"react-svg": "^16.1.32",
 		"web-vitals": "^2.1.4",
